--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/joehand/url-dat#readme",
   "devDependencies": {
+    "memdb": "^1.3.1",
     "tap-spec": "^4.1.1"
+  },
+  "dependencies": {
+    "pump": "^1.0.1",
+    "tar-dat": "^1.0.0",
+    "url-tar": "^1.0.0"
   }
 }
