--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/joehand/url-dat#readme",
   "devDependencies": {
+    "hyperdrive": "^7.12.2",
     "memdb": "^1.3.1",
-    "tap-spec": "^4.1.1"
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
   },
   "dependencies": {
     "pump": "^1.0.1",
